--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ publishing {
             
             groupId = 'com.github.FRC-7525'
             artifactId = 'pioneerslib'
-            version = '1.1.3'
+            version = '1.3.0'
             
             pom {
                 name = 'pioneersLib'
@@ -44,6 +44,11 @@ publishing {
                         id = 'Tortuga-AM'
                         name = "Aitan"
                         email = "aitan.m.martinez@gmail.com"
+                    }
+                    developer {
+                        id = 'polargh'
+                        name = 'Logan'
+                        email = ''
                     }
                 }
             }
