update version and artifact vendor deps (#22)
* update version and artifact vendor deps

* published!

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,13 @@ java {
     targetCompatibility = JavaVersion.VERSION_17
 }
 
+task vendordepsZip(type: Zip) {
+    from 'vendordeps'  
+    archiveBaseName.set('pioneerslib') 
+    archiveVersion.set(version)
+    archiveClassifier.set('vendordeps')
+}
+
 // Publishing configuration for GitHub Packages
 publishing {
     publications {
@@ -17,13 +24,17 @@ publishing {
             
             groupId = 'com.github.FRC-7525'
             artifactId = 'pioneerslib'
-            version = '1.3.4'
+            version = '1.3.7'
             
+            artifact vendordepsZip
+
             pom {
                 name = 'pioneersLib'
                 description = 'FRC Team 7525s Utility Library'
                 url = 'https://github.com/FRC-7525/PioneersLib'
                 
+               
+
                 developers {
                     developer {
                         id = 'GreenTomato5'
